--- a/login.html
+++ b/login.html
@@ -75,7 +75,8 @@
       <!-- 密码确认框 -->
       <div class="layui-form-item">
         <i class="layui-icon layui-icon-password"></i>
-        <input type="password" name="repassword" required lay-verify="required|pwd|repwd" placeholder="再次确认密码" autocomplete="off"
+        <input type="password" name="repassword" required lay-verify="required|pwd|repwd" placeholder="再次确认密码"
+               autocomplete="off"
                class="layui-input"/>
       </div>
       <!-- 按钮 -->
